compilateurDeca/src/test/deca/context/invalid/sans_objet/affectations/int_assign_string.deca
// Description:
//    Sans-Objet
//    Affectation
//    condition assign_compatible
//
// Resultats:
//    Ligne 14: 
//        Type incompatible pour l'affectation
// 
// Historique:
//    cree le 06/01/2026

{
    int a = "a";
}